Added Babel for IE11 support. Restructured gulpfile.js and moved vendor js into js/vendor directoryt. Updates paths, removed unused packages and plugins.

--- a/src/moovel-header.html
+++ b/src/moovel-header.html
@@ -189,49 +189,51 @@
       <!-- End Header -->
 
       <!-- Begin Main Content -->
-      <section id="mainContent">
-        <div id="secondaryPage">
-          <div class="page-title">
-            <div class="container">
-              <h1>Page Title</h1>
-            </div>
-          </div>
+      <main id="pageContainer">
+		<section>
+			<div id="secondaryPage">
+			<div class="page-title">
+				<div class="container">
+				<h1>Page Title</h1>
+				</div>
+			</div>
 
-          <div id="store" class="page-content">
-            <!-- Main page content -->
-            <section class="section">
-              <div class="container">
-                <a
-                  href="#"
-                  class="btn btn-primary"
-                  onclick="$('body').toggleClass('moovel');"
-                  );
-                  >Toggle Body Moovel Class</a
-                >
-              </div>
-            </section>
+			<div id="store" class="page-content">
+				<!-- Main page content -->
+				<section class="section">
+				<div class="container">
+					<a
+					href="#"
+					class="btn btn-primary"
+					onclick="$('body').toggleClass('moovel');"
+					);
+					>Toggle Body Moovel Class</a
+					>
+				</div>
+				</section>
 
-            <!-- Additional content sections -->
-            <section class="section">
-              <div class="container">
-                Additional content goes here (note the stiped background).
-              </div>
-            </section>
+				<!-- Additional content sections -->
+				<section class="section">
+				<div class="container">
+					Additional content goes here (note the stiped background).
+				</div>
+				</section>
 
-            <section class="section">
-              <div class="container">
-                Additional content goes here.
-              </div>
-            </section>
+				<section class="section">
+				<div class="container">
+					Additional content goes here.
+				</div>
+				</section>
 
-            <section class="section">
-              <div class="container">
-                Additional content goes here.
-              </div>
-            </section>
-          </div>
-        </div>
-      </section>
+				<section class="section">
+				<div class="container">
+					Additional content goes here.
+				</div>
+				</section>
+			</div>
+			</div>
+		</section>
+	</main>
       <!-- End Main Content -->
 
       <!-- Begin Footer -->
@@ -414,11 +416,11 @@
       <!-- End Footer -->
 
       <!-- Vendor scripts -->
-      <script src="/template/js/jquery.js"></script>
-      <script src="/template/js/popper.js"></script>
-      <script src="/template/js/bootstrap.js"></script>
-      <script src="/template/js/jquery.exlink.js"></script>
-      <script src="/template/js/svgxuse.js"></script>
+      <script src="/template/js/vendor/jquery.js"></script>
+      <script src="/template/js/vendor/popper.js"></script>
+      <script src="/template/js/vendor/bootstrap.js"></script>
+      
+      
       <!-- End vendor scripts -->
 
       <!-- build:js /template/js/scripts.js -->
