--- a/src/shopping-cart.html
+++ b/src/shopping-cart.html
@@ -116,7 +116,7 @@
 										<div class="input-group-append">
 											<button type="button" id="siteSearchBtn" class="btn btn-primary">
 												<span class="sr-only">Search button</span>
-												<img alt="search button" class="icon" src="/img/svg/search-gray.svg">
+												<img alt="search button" class="icon" src="/template/img/svg/search-gray.svg">
 											</button>
 										</div>
 									</div>
@@ -198,205 +198,207 @@
 		<!-- End Header -->
 
 		<!-- Begin Main Content -->
-		<section id="mainContent">
-			<div id="primaryPage">
+		<main id="pageContainer">
+			<section>
+				<div id="primaryPage">
 
-				<!-- When adding a new page, also add new background image styles in _hero-backgrounds.scss. Change the class below to match that of the hero background. -->
-				<div class="hero store-hero-bg">
-					<div class="container">
-						<div class="page-title">
-							<h1>Store</h1>
+					<!-- When adding a new page, also add new background image styles in _hero-backgrounds.scss. Change the class below to match that of the hero background. -->
+					<div class="hero store-hero-bg">
+						<div class="container">
+							<div class="page-title">
+								<h1>Store</h1>
+							</div>
 						</div>
 					</div>
-				</div>
 
-				<div id="store" class="page-content">
-					<!-- Main page content -->
-					<section class="section reverse">
-						<div class="container">
-							<div class="shopping-cart">
-								<div class="row">
-									<div class="col col-lg-8 offset-lg-2">
-										<div id="shoppingCart"
-											 class="card mb-0">
-											<div class="card-header">
-												<h2 class="text-center">Shopping cart</h2>
-											</div>
-											<div class="card-body p-0">
-												<div class="cart-item-heading">
-													<div class="row">
-														<div class="col-6 col-md-8 h2">Item</div>
-														<div class="col-3 col-md-2 h2 text-center">Qty
-														</div>
-														<div class="col-3 col-md-2 h2 text-right">Total
+					<div id="store" class="page-content">
+						<!-- Main page content -->
+						<section class="section reverse">
+							<div class="container">
+								<div class="shopping-cart">
+									<div class="row">
+										<div class="col col-lg-8 offset-lg-2">
+											<div id="shoppingCart"
+												class="card mb-0">
+												<div class="card-header">
+													<h2 class="text-center">Shopping cart</h2>
+												</div>
+												<div class="card-body p-0">
+													<div class="cart-item-heading">
+														<div class="row">
+															<div class="col-6 col-md-8 h2">Item</div>
+															<div class="col-3 col-md-2 h2 text-center">Qty
+															</div>
+															<div class="col-3 col-md-2 h2 text-right">Total
+															</div>
 														</div>
 													</div>
-												</div>
-												<div class="cart-item">
-													<h3 class="h4 cyan">Stored Value</h3>
-													<p>Card #: <span class="cyan">1234-5678-9000-0000</span>
-													</p>
-													<div class="row d-felx align-items-center">
-														<div class="col-6 col-md-8">
-															<div
-																 class="custom-control custom-checkbox d-inline-block">
-																<input type="checkbox"
-																	   id="deleteItem"
-																	   name="deleteItem"
-																	   class="custom-control-input" />
-																<label for="deleteItem"
-																	   class="custom-control-label">Delete</label>
-															</div>
-															<p id="itemDescription"
-															   class="item-description d-inline-block">
-																$5.00</p>
-														</div>
-														<div class="col-3 col-md-2">
-															<div class="form-group">
-																<label for="quantity"
-																	   class="sr-only">Quantity</label>
-																<input type="number"
-																	   id="quantity"
-																	   name="quantity"
-																	   class="form-control"
-																	   placeholder="1">
-															</div>
-														</div>
-														<div class="col-3 col-md-2 text-right">
-															<p id="itemCost">$5.00</p>
-														</div>
-													</div>
-												</div>
-												<div class="cart-item">
-													<h3 class="h4 cyan">Visitor Pass</h3>
-													<div class="row d-felx align-items-center">
-														<div class="col-6 col-md-8">
-															<div
-																 class="custom-control custom-checkbox d-inline-block">
-																<input type="checkbox"
-																	   id="deleteItem"
-																	   name="deleteItem"
-																	   class="custom-control-input" />
-																<label for="deleteItem"
-																	   class="custom-control-label">Delete</label>
-															</div>
-															<p id="itemDescription"
-															   class="item-description d-inline-block">
-																$5.00</p>
-														</div>
-														<div class="col-3 col-md-2">
-															<div class="form-group">
-																<label for="quantity"
-																	   class="sr-only">Quantity</label>
-																<input type="number"
-																	   id="quantity"
-																	   name="quantity"
-																	   class="form-control"
-																	   placeholder="1">
-															</div>
-														</div>
-														<div class="col-3 col-md-2 text-right">
-															<p id="itemCost">$5.00</p>
-														</div>
-													</div>
-												</div>
-												<div class="cart-item">
-													<h3 class="h4 cyan">Go-To Card + Stored Value 10</h3>
-													<div class="row d-felx align-items-center">
-														<div class="col-6 col-md-8">
-															<div class="custom-control custom-checkbox d-inline-block">
-																<input type="checkbox"
+													<div class="cart-item">
+														<h3 class="h4 cyan">Stored Value</h3>
+														<p>Card #: <span class="cyan">1234-5678-9000-0000</span>
+														</p>
+														<div class="row d-felx align-items-center">
+															<div class="col-6 col-md-8">
+																<div
+																	class="custom-control custom-checkbox d-inline-block">
+																	<input type="checkbox"
 																		id="deleteItem"
 																		name="deleteItem"
 																		class="custom-control-input" />
-																<label for="deleteItem"
+																	<label for="deleteItem"
 																		class="custom-control-label">Delete</label>
-															</div>
-															<p id="itemDescription"
+																</div>
+																<p id="itemDescription"
 																class="item-description d-inline-block">
-																$10.00</p>
-														</div>
-														<div class="col-3 col-md-2">
-															<div class="form-group">
-																<label for="quantity"
+																	$5.00</p>
+															</div>
+															<div class="col-3 col-md-2">
+																<div class="form-group">
+																	<label for="quantity"
 																		class="sr-only">Quantity</label>
-																<input type="number"
+																	<input type="number"
 																		id="quantity"
 																		name="quantity"
 																		class="form-control"
 																		placeholder="1">
+																</div>
 															</div>
-														</div>
-														<div class="col-3 col-md-2 text-right">
-															<p id="itemCost">$10.00</p>
-														</div>
-													</div>
-												</div>
-												<div class="cost-breakdown">
-													<div class="row gray-bg-200">
-														<div class="col-8 text-right"><strong>Sub
-																Total</strong>
-														</div>
-														<div class="col-4 text-right">$20.00</div>
-													</div>
-													<div class="row">
-														<div class="col-8 text-right"><strong>Processing
-																&amp;
-																Shipping</strong></div>
-														<div class="col-4 text-right">$0.00</div>
-													</div>
-													<div class="row">
-														<div class="col-8 text-right"><strong>Sales
-																Tax</strong>
-														</div>
-														<div class="col-4 text-right">$0.00</div>
-													</div>
-													<div class="row teal-bg">
-														<div class="col-8 text-right">
-															<strong>Total</strong></div>
-														<div class="col-4 text-right">$20.00</div>
-													</div>
-												</div>
-												<div class="cart-controls">
-													<div class="row">
-														<div class="col-md-6">
-															<div class="btn-container">
-																<button type="submit"
-																		id="updateCart"
-																		class="btn btn-warning">Update
-																	cart</button>
-															</div>
-														</div>
-														<div class="col-md-6">
-															<div class="btn-container">
-																<button type="button"
-																		id="emptyCart"
-																		class="btn btn-warning">Empty
-																	cart</button>
+															<div class="col-3 col-md-2 text-right">
+																<p id="itemCost">$5.00</p>
 															</div>
 														</div>
 													</div>
-													<div class="link-container-icon-right">
-														<a href="/"
-															class="btn btn-link">
-															Continue Shopping &nbsp;
-														</a>
+													<div class="cart-item">
+														<h3 class="h4 cyan">Visitor Pass</h3>
+														<div class="row d-felx align-items-center">
+															<div class="col-6 col-md-8">
+																<div
+																	class="custom-control custom-checkbox d-inline-block">
+																	<input type="checkbox"
+																		id="deleteItem"
+																		name="deleteItem"
+																		class="custom-control-input" />
+																	<label for="deleteItem"
+																		class="custom-control-label">Delete</label>
+																</div>
+																<p id="itemDescription"
+																class="item-description d-inline-block">
+																	$5.00</p>
+															</div>
+															<div class="col-3 col-md-2">
+																<div class="form-group">
+																	<label for="quantity"
+																		class="sr-only">Quantity</label>
+																	<input type="number"
+																		id="quantity"
+																		name="quantity"
+																		class="form-control"
+																		placeholder="1">
+																</div>
+															</div>
+															<div class="col-3 col-md-2 text-right">
+																<p id="itemCost">$5.00</p>
+															</div>
+														</div>
 													</div>
-													<div class="button-container-icon-right">
-														<a class="btn btn-outline-primary">Checkout</a>
+													<div class="cart-item">
+														<h3 class="h4 cyan">Go-To Card + Stored Value 10</h3>
+														<div class="row d-felx align-items-center">
+															<div class="col-6 col-md-8">
+																<div class="custom-control custom-checkbox d-inline-block">
+																	<input type="checkbox"
+																			id="deleteItem"
+																			name="deleteItem"
+																			class="custom-control-input" />
+																	<label for="deleteItem"
+																			class="custom-control-label">Delete</label>
+																</div>
+																<p id="itemDescription"
+																	class="item-description d-inline-block">
+																	$10.00</p>
+															</div>
+															<div class="col-3 col-md-2">
+																<div class="form-group">
+																	<label for="quantity"
+																			class="sr-only">Quantity</label>
+																	<input type="number"
+																			id="quantity"
+																			name="quantity"
+																			class="form-control"
+																			placeholder="1">
+																</div>
+															</div>
+															<div class="col-3 col-md-2 text-right">
+																<p id="itemCost">$10.00</p>
+															</div>
+														</div>
 													</div>
-													<p><em>All sales are final.</em></p>
+													<div class="cost-breakdown">
+														<div class="row gray-bg-200">
+															<div class="col-8 text-right"><strong>Sub
+																	Total</strong>
+															</div>
+															<div class="col-4 text-right">$20.00</div>
+														</div>
+														<div class="row">
+															<div class="col-8 text-right"><strong>Processing
+																	&amp;
+																	Shipping</strong></div>
+															<div class="col-4 text-right">$0.00</div>
+														</div>
+														<div class="row">
+															<div class="col-8 text-right"><strong>Sales
+																	Tax</strong>
+															</div>
+															<div class="col-4 text-right">$0.00</div>
+														</div>
+														<div class="row teal-bg">
+															<div class="col-8 text-right">
+																<strong>Total</strong></div>
+															<div class="col-4 text-right">$20.00</div>
+														</div>
+													</div>
+													<div class="cart-controls">
+														<div class="row">
+															<div class="col-md-6">
+																<div class="btn-container">
+																	<button type="submit"
+																			id="updateCart"
+																			class="btn btn-warning">Update
+																		cart</button>
+																</div>
+															</div>
+															<div class="col-md-6">
+																<div class="btn-container">
+																	<button type="button"
+																			id="emptyCart"
+																			class="btn btn-warning">Empty
+																		cart</button>
+																</div>
+															</div>
+														</div>
+														<div class="link-container-icon-right">
+															<a href="/"
+																class="btn btn-link">
+																Continue Shopping &nbsp;
+															</a>
+														</div>
+														<div class="button-container-icon-right">
+															<a class="btn btn-outline-primary">Checkout</a>
+														</div>
+														<p><em>All sales are final.</em></p>
+													</div>
 												</div>
 											</div>
 										</div>
 									</div>
 								</div>
 							</div>
-						</div>
-					</section>
+						</section>
+					</div>
 				</div>
-			</div>
-		</section>
+			</section>
+		</main>
 		<!-- End Main Content -->
 
 		<!-- Begin Footer -->
@@ -497,11 +499,9 @@
 		<!-- End Footer -->
 
 		<!-- Vendor scripts -->
-		<script src="/template/js/jquery.js"></script>
-		<script src="/template/js/popper.js"></script>
-		<script src="/template/js/bootstrap.js"></script>
-		<script src="/template/js/jquery.exlink.js"></script>
-		<script src="/template/js/svgxuse.js"></script>
+		<script src="/template/js/vendor/jquery.js"></script>
+		<script src="/template/js/vendor/popper.js"></script>
+		<script src="/template/js/vendor/bootstrap.js"></script>
 		<!-- End vendor scripts -->
 
 		<!-- build:js /template/js/scripts.min.js -->
