--- a/src/_primary-boilerplate.html
+++ b/src/_primary-boilerplate.html
@@ -113,7 +113,7 @@
 										<div class="input-group-append">
 											<button type="button" id="siteSearchBtn" class="btn btn-primary">
 												<span class="sr-only">Search button</span>
-												<img alt="search button" class="icon" src="/img/svg/search-gray.svg">
+												<img alt="search button" class="icon" src="/template/img/svg/search-gray.svg">
 											</button>
 										</div>
 									</div>
@@ -195,44 +195,46 @@
 		<!-- End Header -->
 
 		<!-- Begin Main Content -->
-		<section id="mainContent">
-			<div id="primaryPage">
+		<main id="pageContainer">
+			<section>
+				<div id="primaryPage">
 
-				<!-- When adding a new page, also add new background image styles in _hero-backgrounds.scss. Change the class below to match that of the hero background. -->
-				<div class="hero store-hero-bg">
-					<div class="container">
-						<div class="page-title">
-							<h1>Metro Transit Store</h1>
+					<!-- When adding a new page, also add new background image styles in _hero-backgrounds.scss. Change the class below to match that of the hero background. -->
+					<div class="hero store-hero-bg">
+						<div class="container">
+							<div class="page-title">
+								<h1>Metro Transit Store</h1>
+							</div>
 						</div>
 					</div>
+
+					<div id="store" class="page-content">
+						<!-- Main page content -->
+						<section class="section">
+							<div class="container">
+								Content goes here.
+							</div>
+						</section>
+
+						<!-- Additional content sections -->
+						<section class="section">
+							<div class="container">
+							</div>
+						</section>
+
+						<section class="section">
+							<div class="container">
+							</div>
+						</section>
+
+						<section class="section">
+							<div class="container">
+							</div>
+						</section>
+					</div>
 				</div>
-
-				<div id="store" class="page-content">
-					<!-- Main page content -->
-					<section class="section">
-						<div class="container">
-							Content goes here.
-						</div>
-					</section>
-
-					<!-- Additional content sections -->
-					<section class="section">
-						<div class="container">
-						</div>
-					</section>
-
-					<section class="section">
-						<div class="container">
-						</div>
-					</section>
-
-					<section class="section">
-						<div class="container">
-						</div>
-					</section>
-				</div>
-			</div>
-		</section>
+			</section>
+		</main>
 		<!-- End Main Content -->
 
 		<!-- Begin Footer -->
@@ -333,11 +335,9 @@
 		<!-- End Footer -->
 
 		<!-- Vendor scripts -->
-		<script src="/template/js/jquery.js"></script>
-		<script src="/template/js/popper.js"></script>
-		<script src="/template/js/bootstrap.js"></script>
-		<script src="/template/js/jquery.exlink.js"></script>
-		<script src="/template/js/svgxuse.js"></script>
+		<script src="/template/js/vendor/jquery.js"></script>
+		<script src="/template/js/vendor/popper.js"></script>
+		<script src="/template/js/vendor/bootstrap.js"></script>
 		<!-- End vendor scripts -->
 
 		<!-- build:js /template/js/scripts.min.js -->
