--- a/src/_secondary-boilerplate.html
+++ b/src/_secondary-boilerplate.html
@@ -113,7 +113,7 @@
 										<div class="input-group-append">
 											<button type="button" id="siteSearchBtn" class="btn btn-primary">
 												<span class="sr-only">Search button</span>
-												<img alt="search button" class="icon" src="/img/svg/search-gray.svg">
+												<img alt="search button" class="icon" src="/template/img/svg/search-gray.svg">
 											</button>
 										</div>
 									</div>
@@ -195,43 +195,45 @@
 		<!-- End Header -->
 
 		<!-- Begin Main Content -->
-		<section id="mainContent">
-			<div id="secondaryPage">
-				<div class="page-title">
-					<div class="container">
-						<h1>Page Title</h1>
+		<main id="pageContainer">
+			<section>
+				<div id="secondaryPage">
+					<div class="page-title">
+						<div class="container">
+							<h1>Page Title</h1>
+						</div>
+					</div>
+
+					<div id="store" class="page-content">
+						<!-- Main page content -->
+						<section class="section">
+							<div class="container">
+								Content goes here.
+							</div>
+						</section>
+
+						<!-- Additional content sections -->
+						<section class="section">
+							<div class="container">
+								Additional content goes here (note the stiped background).
+							</div>
+						</section>
+
+						<section class="section">
+							<div class="container">
+								Additional content goes here.
+							</div>
+						</section>
+
+						<section class="section">
+							<div class="container">
+								Additional content goes here.
+							</div>
+						</section>
 					</div>
 				</div>
-
-				<div id="store" class="page-content">
-					<!-- Main page content -->
-					<section class="section">
-						<div class="container">
-							Content goes here.
-						</div>
-					</section>
-
-					<!-- Additional content sections -->
-					<section class="section">
-						<div class="container">
-							Additional content goes here (note the stiped background).
-						</div>
-					</section>
-
-					<section class="section">
-						<div class="container">
-							Additional content goes here.
-						</div>
-					</section>
-
-					<section class="section">
-						<div class="container">
-							Additional content goes here.
-						</div>
-					</section>
-				</div>
-			</div>
-		</section>
+			</section>
+		</main>
 		<!-- End Main Content -->
 
 		<!-- Begin Footer -->
@@ -332,11 +334,9 @@
 		<!-- End Footer -->
 
 		<!-- Vendor scripts -->
-		<script src="/template/js/jquery.js"></script>
-		<script src="/template/js/popper.js"></script>
-		<script src="/template/js/bootstrap.js"></script>
-		<script src="/template/js/jquery.exlink.js"></script>
-		<script src="/template/js/svgxuse.js"></script>
+		<script src="/template/js/vendor/jquery.js"></script>
+		<script src="/template/js/vendor/popper.js"></script>
+		<script src="/template/js/vendor/bootstrap.js"></script>
 		<!-- End vendor scripts -->
 
 		<!-- build:js /template/js/scripts.min.js -->
