--- a/src/checkout-complete.html
+++ b/src/checkout-complete.html
@@ -116,7 +116,7 @@
 										<div class="input-group-append">
 											<button type="button" id="siteSearchBtn" class="btn btn-primary">
 												<span class="sr-only">Search button</span>
-												<img alt="search button" class="icon" src="/img/svg/search-gray.svg">
+												<img alt="search button" class="icon" src="/template/img/svg/search-gray.svg">
 											</button>
 										</div>
 									</div>
@@ -198,185 +198,187 @@
 		<!-- End Header -->
 
 		<!-- Begin Main Content -->
-		<section id="mainContent">
-			<div id="primaryPage">
+		<main id="pageContainer">
+			<section>
+				<div id="primaryPage">
 
-				<!-- When adding a new page, also add new background image styles in _hero-backgrounds.scss. Change the class below to match that of the hero background. -->
-				<div class="hero store-hero-bg">
-					<div class="container">
-						<div class="page-title">
-							<h1>Store</h1>
+					<!-- When adding a new page, also add new background image styles in _hero-backgrounds.scss. Change the class below to match that of the hero background. -->
+					<div class="hero store-hero-bg">
+						<div class="container">
+							<div class="page-title">
+								<h1>Store</h1>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div id="store"
-					 class="page-content">
-					<section class="section reverse">
-						<div class="container">
-							<div class="checkout">
-								<div id="shoppingCart">
-									<div class="card">
-										<div class="card-header">
-											<h2 class="text-center">Checkout Complete</h2>
-										</div>
-										<div class="card-body">
-											<h3 class="h4">Order Receipt</h3>
-											<p>Thank you for your order. An order receipt has been sent to your
-												email address. If you added value to an existing Go-To Card or
-												pass, please allow 24 hours for processing. In order for the
-												value to transfer to your card, you must touch your card to a
-												Go-To Card reader (on a bus or any rail station platform) within
-												28 days. If you ordered Go-To Card(s) or other items, your order
-												will ship in 2-3 days. Please allow 7 business days for
-												delivery. Note: Some items may be shipped separately. Metro
-												Transit is not responsible for lost or misdirected mail. All
-												sales are final.</p>
-											<p class="mb-1"><strong>Order #: W2394902</strong></p>
-											<p>Order Date: 07-18-2019 05:34 PM</p>
+					<div id="store"
+						class="page-content">
+						<section class="section reverse">
+							<div class="container">
+								<div class="checkout">
+									<div id="shoppingCart">
+										<div class="card">
+											<div class="card-header">
+												<h2 class="text-center">Checkout Complete</h2>
+											</div>
+											<div class="card-body">
+												<h3 class="h4">Order Receipt</h3>
+												<p>Thank you for your order. An order receipt has been sent to your
+													email address. If you added value to an existing Go-To Card or
+													pass, please allow 24 hours for processing. In order for the
+													value to transfer to your card, you must touch your card to a
+													Go-To Card reader (on a bus or any rail station platform) within
+													28 days. If you ordered Go-To Card(s) or other items, your order
+													will ship in 2-3 days. Please allow 7 business days for
+													delivery. Note: Some items may be shipped separately. Metro
+													Transit is not responsible for lost or misdirected mail. All
+													sales are final.</p>
+												<p class="mb-1"><strong>Order #: W2394902</strong></p>
+												<p>Order Date: 07-18-2019 05:34 PM</p>
+											</div>
 										</div>
 									</div>
 								</div>
-							</div>
-							<div class="shopping-cart">
-								<div class="row">
-									<div class="col col-lg-8 offset-lg-2">
-										<div id="shoppingCart"
-											 class="card mb-0">
-											<div class="card-body p-0">
-												<div class="cart-item-heading">
-													<div class="row">
-														<div class="col-6 col-md-8 h2">Item</div>
-														<div class="col-3 col-md-2 h2 text-center">Qty</div>
-														<div class="col-3 col-md-2 h2 text-right">Total</div>
-													</div>
-												</div>
-												<div class="cart-item">
-													<h3 class="h4 cyan">Stored Value</h3>
-													<p>Card #: <span class="cyan">1234-5678-9000-0000</span></p>
-													<div class="row">
-														<div class="col-6 col-md-8 d-flex pt-1 pt-md-2">
-															<p id="itemDescription"
-															   class="item-description d-inline-block">$5.00</p>
-														</div>
-														<div class="col-3 col-md-2 pt-1 pt-md-2">
-															<p class="text-center">1</p>
-														</div>
-														<div class="col-3 col-md-2 pt-1 pt-md-2 text-right">
-															<p id="itemCost">$5.00</p>
+								<div class="shopping-cart">
+									<div class="row">
+										<div class="col col-lg-8 offset-lg-2">
+											<div id="shoppingCart"
+												class="card mb-0">
+												<div class="card-body p-0">
+													<div class="cart-item-heading">
+														<div class="row">
+															<div class="col-6 col-md-8 h2">Item</div>
+															<div class="col-3 col-md-2 h2 text-center">Qty</div>
+															<div class="col-3 col-md-2 h2 text-right">Total</div>
 														</div>
 													</div>
-												</div>
-												<div class="cart-item">
-													<h3 class="h4 cyan">Visitor Pass</h3>
-													<div class="row">
-														<div class="col-6 col-md-8 d-flex pt-1 pt-md-2">
-															<p id="itemDescription"
-															   class="item-description d-inline-block">$5.00</p>
-														</div>
-														<div class="col-3 col-md-2 pt-1 pt-md-2">
-															<p class="text-center">1</p>
-														</div>
-														<div class="col-3 col-md-2 pt-1 pt-md-2 text-right">
-															<p id="itemCost">$5.00</p>
-														</div>
-													</div>
-												</div>
-												<div class="cart-item">
-													<h3 class="h4 cyan">New Go-To Card + Stored Value 10</h3>
-													<div class="row">
-														<div class="col-6 col-md-8 d-flex pt-1 pt-md-2">
-															<p id="itemDescription"
-															   class="item-description d-inline-block">$10.00</p>
-														</div>
-														<div class="col-3 col-md-2 pt-1 pt-md-2">
-															<p class="text-center">1</p>
-														</div>
-														<div class="col-3 col-md-2 pt-1 pt-md-2 text-right">
-															<p id="itemCost">$10.00</p>
+													<div class="cart-item">
+														<h3 class="h4 cyan">Stored Value</h3>
+														<p>Card #: <span class="cyan">1234-5678-9000-0000</span></p>
+														<div class="row">
+															<div class="col-6 col-md-8 d-flex pt-1 pt-md-2">
+																<p id="itemDescription"
+																class="item-description d-inline-block">$5.00</p>
+															</div>
+															<div class="col-3 col-md-2 pt-1 pt-md-2">
+																<p class="text-center">1</p>
+															</div>
+															<div class="col-3 col-md-2 pt-1 pt-md-2 text-right">
+																<p id="itemCost">$5.00</p>
+															</div>
 														</div>
 													</div>
-												</div>
-												<div class="cost-breakdown">
-													<div class="row gray-bg-200">
-														<div class="col-8 text-right"><strong>Sub Total</strong>
+													<div class="cart-item">
+														<h3 class="h4 cyan">Visitor Pass</h3>
+														<div class="row">
+															<div class="col-6 col-md-8 d-flex pt-1 pt-md-2">
+																<p id="itemDescription"
+																class="item-description d-inline-block">$5.00</p>
+															</div>
+															<div class="col-3 col-md-2 pt-1 pt-md-2">
+																<p class="text-center">1</p>
+															</div>
+															<div class="col-3 col-md-2 pt-1 pt-md-2 text-right">
+																<p id="itemCost">$5.00</p>
+															</div>
 														</div>
-														<div class="col-4 text-right">$20.00</div>
 													</div>
-													<div class="row">
-														<div class="col-8 text-right"><strong>Processing &amp;
-																Shipping</strong></div>
-														<div class="col-4 text-right">$0.00</div>
-													</div>
-													<div class="row">
-														<div class="col-8 text-right"><strong>Sales Tax</strong>
+													<div class="cart-item">
+														<h3 class="h4 cyan">New Go-To Card + Stored Value 10</h3>
+														<div class="row">
+															<div class="col-6 col-md-8 d-flex pt-1 pt-md-2">
+																<p id="itemDescription"
+																class="item-description d-inline-block">$10.00</p>
+															</div>
+															<div class="col-3 col-md-2 pt-1 pt-md-2">
+																<p class="text-center">1</p>
+															</div>
+															<div class="col-3 col-md-2 pt-1 pt-md-2 text-right">
+																<p id="itemCost">$10.00</p>
+															</div>
 														</div>
-														<div class="col-4 text-right">$0.00</div>
 													</div>
-													<div class="row teal-bg">
-														<div class="col-8 text-right"><strong>Total</strong></div>
-														<div class="col-4 text-right">$20.00</div>
+													<div class="cost-breakdown">
+														<div class="row gray-bg-200">
+															<div class="col-8 text-right"><strong>Sub Total</strong>
+															</div>
+															<div class="col-4 text-right">$20.00</div>
+														</div>
+														<div class="row">
+															<div class="col-8 text-right"><strong>Processing &amp;
+																	Shipping</strong></div>
+															<div class="col-4 text-right">$0.00</div>
+														</div>
+														<div class="row">
+															<div class="col-8 text-right"><strong>Sales Tax</strong>
+															</div>
+															<div class="col-4 text-right">$0.00</div>
+														</div>
+														<div class="row teal-bg">
+															<div class="col-8 text-right"><strong>Total</strong></div>
+															<div class="col-4 text-right">$20.00</div>
+														</div>
 													</div>
 												</div>
 											</div>
 										</div>
 									</div>
 								</div>
-							</div>
-							<div class="card-deck">
-								<div class="card mb-0">
-									<div class="card-header text-center p-1">
-										<p class="font-weight-bold mb-0">Billing
+								<div class="card-deck">
+									<div class="card mb-0">
+										<div class="card-header text-center p-1">
+											<p class="font-weight-bold mb-0">Billing
+												address</p>
+										</div>
+										<div class="card-body gray-bg-100 p-1 ">
+											<p class="m-1 font-weight-bold">Ellen Thomson</p>
+											<p class="m-1 font-weight-bold">225 Farrington Street<br> St. Paul, MN
+												55102 </p>
+											<p class="m-1 font-weight-bold">651-283-7246</p>
+											<p class="m-1 font-weight-bold">ellenmthomson@gmail.com</p>
+										</div>
+										<div class="card-footer">&nbsp;</div>
+									</div>
+									<div class="card mb-0">
+										<p class="card-header text-center font-weight-bold pt-1 pb-1">Shipping
 											address</p>
+										<div class="card-body gray-bg-100 p-1 ">
+											<p class="m-1 font-weight-bold">Ellen Thomson</p>
+											<p class="m-1 font-weight-bold">225 Farrington Street<br> St. Paul, MN
+												55102 </p>
+											<p class="m-1 font-weight-bold">651-283-7246</p>
+											<p class="m-1 font-weight-bold">ellenmthomson@gmail.com</p>
+										</div>
+										<div class="card-footer">&nbsp;</div>
 									</div>
-									<div class="card-body gray-bg-100 p-1 ">
-										<p class="m-1 font-weight-bold">Ellen Thomson</p>
-										<p class="m-1 font-weight-bold">225 Farrington Street<br> St. Paul, MN
-											55102 </p>
-										<p class="m-1 font-weight-bold">651-283-7246</p>
-										<p class="m-1 font-weight-bold">ellenmthomson@gmail.com</p>
-									</div>
-									<div class="card-footer">&nbsp;</div>
-								</div>
-								<div class="card mb-0">
-									<p class="card-header text-center font-weight-bold pt-1 pb-1">Shipping
-										address</p>
-									<div class="card-body gray-bg-100 p-1 ">
-										<p class="m-1 font-weight-bold">Ellen Thomson</p>
-										<p class="m-1 font-weight-bold">225 Farrington Street<br> St. Paul, MN
-											55102 </p>
-										<p class="m-1 font-weight-bold">651-283-7246</p>
-										<p class="m-1 font-weight-bold">ellenmthomson@gmail.com</p>
-									</div>
-									<div class="card-footer">&nbsp;</div>
-								</div>
-								<div class="card mb-0">
-									<p class="card-header text-center font-weight-bold pt-1 pb-1">Payment
-										information</p>
-									<div class="card-body gray-bg-100 p-1 ">
-										<p class="m-1 font-weight-bold">Method: Credit Card </p>
-										<p class="m-1 font-weight-bold">MasterCard 9912 </p>
-										<p class="m-1 font-weight-bold">Approval#: 073433</p>
-									</div>
-									<div class="card-footer">&nbsp;</div>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-4">
-									<div class="text-link-container">
-										<a href="/">Continue shopping &nbsp;</a>
+									<div class="card mb-0">
+										<p class="card-header text-center font-weight-bold pt-1 pb-1">Payment
+											information</p>
+										<div class="card-body gray-bg-100 p-1 ">
+											<p class="m-1 font-weight-bold">Method: Credit Card </p>
+											<p class="m-1 font-weight-bold">MasterCard 9912 </p>
+											<p class="m-1 font-weight-bold">Approval#: 073433</p>
+										</div>
+										<div class="card-footer">&nbsp;</div>
 									</div>
 								</div>
-								<div class="col-md-4">
-									<div class="text-link-container">
-										<a href="/">Back to My Fare Card List &nbsp;</a>
+								<div class="row">
+									<div class="col-md-4">
+										<div class="text-link-container">
+											<a href="/">Continue shopping &nbsp;</a>
+										</div>
+									</div>
+									<div class="col-md-4">
+										<div class="text-link-container">
+											<a href="/">Back to My Fare Card List &nbsp;</a>
+										</div>
 									</div>
 								</div>
 							</div>
-						</div>
-					</section>
+						</section>
+					</div>
 				</div>
-			</div>
-		</section>
+			</section>
+		</main>
 		<!-- End Main Content -->
 
 		<!-- Begin Footer -->
@@ -477,11 +479,9 @@
 		<!-- End Footer -->
 
 		<!-- Vendor scripts -->
-		<script src="/template/js/jquery.js"></script>
-		<script src="/template/js/popper.js"></script>
-		<script src="/template/js/bootstrap.js"></script>
-		<script src="/template/js/jquery.exlink.js"></script>
-		<script src="/template/js/svgxuse.js"></script>
+		<script src="/template/js/vendor/jquery.js"></script>
+		<script src="/template/js/vendor/popper.js"></script>
+		<script src="/template/js/vendor/bootstrap.js"></script>
 		<!-- End vendor scripts -->
 
 		<!-- build:js /template/js/scripts.min.js -->
