--- a/src/create-account.html
+++ b/src/create-account.html
@@ -113,7 +113,7 @@
 										<div class="input-group-append">
 											<button type="button" id="siteSearchBtn" class="btn btn-primary">
 												<span class="sr-only">Search button</span>
-												<img alt="search button" class="icon" src="/img/svg/search-gray.svg">
+												<img alt="search button" class="icon" src="/template/img/svg/search-gray.svg">
 											</button>
 										</div>
 									</div>
@@ -195,51 +195,53 @@
 		<!-- End Header -->
 
 		<!-- Begin Main Content -->
-		<section id="mainContent">
-			<div id="secondaryPage">
-				<div class="page-title">
-					<div class="container">
-						<h1>Create Account</h1>
+		<main id="pageContainer">
+			<section>
+				<div id="secondaryPage">
+					<div class="page-title">
+						<div class="container">
+							<h1>Create Account</h1>
+						</div>
 					</div>
-				</div>
 
-				<div id="store" class="page-content">
-					<!-- Main page content -->
-					<section class="section white-bg">
-						<div class="container d-flex justify-content-center">
-							<div class="login-signup-form gray-bg-100 p-4 billing-info">
-								<div class="d-flex justify-content-between">
-									<p class="font-weight-bold text-wrap">Online shopping at metrotransit.org is faster</p>
-									
-									<p class="ml-3 d-flex denote-required position-relative"><span
-										class="required-symbol">&#42;</span> =&nbsp;Required Field</p>
-								</div>
-								<div class="pr-4 mb-4">
-									<div class="form-group mb-4 required">
-										<input type="email" class="form-control gray-box" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
-										<small id="emailHelp" class="form-text text-muted">Must be 5-20 characters. You can use numbers, letters and underscore. It is not case-sensitive.</small>
+					<div id="store" class="page-content">
+						<!-- Main page content -->
+						<section class="section white-bg">
+							<div class="container d-flex justify-content-center">
+								<div class="login-signup-form gray-bg-100 p-4 billing-info">
+									<div class="d-flex justify-content-between">
+										<p class="font-weight-bold text-wrap">Online shopping at metrotransit.org is faster</p>
+										
+										<p class="ml-3 d-flex denote-required position-relative"><span
+											class="required-symbol">&#42;</span> =&nbsp;Required Field</p>
 									</div>
-									<div class="form-group mb-4 required">
-										<input type="email" class="form-control gray-box" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="E-mail">
-										<small id="emailHelp" class="form-text text-muted">At least 8 characters, including one symbol character.</small>
+									<div class="pr-4 mb-4">
+										<div class="form-group mb-4 required">
+											<input type="email" class="form-control gray-box" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
+											<small id="emailHelp" class="form-text text-muted">Must be 5-20 characters. You can use numbers, letters and underscore. It is not case-sensitive.</small>
+										</div>
+										<div class="form-group mb-4 required">
+											<input type="email" class="form-control gray-box" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="E-mail">
+											<small id="emailHelp" class="form-text text-muted">At least 8 characters, including one symbol character.</small>
+										</div>
+										<div class="form-group mb-4 required">
+											<input type="password" class="form-control gray-box" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Password">
+										</div>
+										<div class="form-group">
+											<input type="password" class="form-control gray-box" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Confirm Password">
+										</div>
+									</div>								
+									<div class="d-flex justify-content-center mb-2">
+										<button class="btn btn-warning">Create account</button>
 									</div>
-									<div class="form-group mb-4 required">
-										<input type="password" class="form-control gray-box" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Password">
-									</div>
-									<div class="form-group">
-										<input type="password" class="form-control gray-box" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Confirm Password">
-									</div>
-								</div>								
-								<div class="d-flex justify-content-center mb-2">
-									<button class="btn btn-warning">Create account</button>
 								</div>
 							</div>
-						</div>
-					</section>
+						</section>
 
+					</div>
 				</div>
-			</div>
-		</section>
+			</section>
+		</main>
 		<!-- End Main Content -->
 
 		<!-- Begin Footer -->
@@ -340,11 +342,9 @@
 		<!-- End Footer -->
 
 		<!-- Vendor scripts -->
-		<script src="/template/js/jquery.js"></script>
-		<script src="/template/js/popper.js"></script>
-		<script src="/template/js/bootstrap.js"></script>
-		<script src="/template/js/jquery.exlink.js"></script>
-		<script src="/template/js/svgxuse.js"></script>
+		<script src="/template/js/vendor/jquery.js"></script>
+		<script src="/template/js/vendor/popper.js"></script>
+		<script src="/template/js/vendor/bootstrap.js"></script>
 		<!-- End vendor scripts -->
 
 		<!-- build:js /template/js/scripts.min.js -->
