--- a/src/login.html
+++ b/src/login.html
@@ -113,7 +113,7 @@
 										<div class="input-group-append">
 											<button type="button" id="siteSearchBtn" class="btn btn-primary">
 												<span class="sr-only">Search button</span>
-												<img alt="search button" class="icon" src="/img/svg/search-gray.svg">
+												<img alt="search button" class="icon" src="/template/img/svg/search-gray.svg">
 											</button>
 										</div>
 									</div>
@@ -195,60 +195,62 @@
 		<!-- End Header -->
 
 		<!-- Begin Main Content -->
-		<section id="mainContent">
-			<div id="secondaryPage">
-				<div class="page-title">
-					<div class="container">
-						<h1>Login</h1>
+		<main id="pageContainer">
+			<section>
+				<div id="secondaryPage">
+					<div class="page-title">
+						<div class="container">
+							<h1>Login</h1>
+						</div>
+					</div>
+
+					<div id="store" class="page-content">
+						<!-- Main page content -->
+						<section class="section white-bg">
+							<div class="container d-flex justify-content-center">
+								<div class="login-signup-form gray-bg-100 p-4 billing-info">
+									<div class="d-flex justify-content-end">
+										<p class="d-flex denote-required position-relative"><span
+											class="required-symbol">&#42;</span>= Required Field</p>
+									</div>
+									<div class="pr-4">
+										<div class="form-group mb-4 w-auto required">
+											<input type="username" class="form-control gray-box" id="loginEmail" aria-describedby="emailHelp" placeholder="User Name">
+										</div>
+										<div class="form-group mb-4 w-auto required">
+											<input type="email" class="form-control gray-box" id="emailAddress" aria-describedby="emailHelp" placeholder="E-mail Address">
+										</div>
+									</div>
+									
+									<div>
+										<p class="mb-1">Remember Me</p>
+										<div class="white-bg p-3 gray-box">
+											<div class="custom-control custom-checkbox">
+												<input type="checkbox" class="custom-control-input" id="customCheck1">
+												<label class="custom-control-label" for="customCheck1">By clicking “Remember Me,” 
+													you allow Metro Transit/Metropolitan Council to create a “cookie” that is 
+													installed on your computer and remains there for seven days. This allows you 
+													to access personalized services on metrotransit.org without entering your 
+													username and password each time you visit.</label>
+											</div>
+										</div>
+									</div>
+									<div class="d-flex justify-content-end mb-4">
+										<a href="">Forgot your password?</a>
+									</div>
+									<div class="text-center mb-4">
+										<a href="" class="btn btn-warning mb-4">Sign in</a>
+										<p class="mb-4 mt-4">Or</p>
+										<a href="" class="btn btn-warning">Create account</a>
+									</div>
+								</div>
+							</div>
+						</section>
+
 					</div>
 				</div>
-
-				<div id="store" class="page-content">
-					<!-- Main page content -->
-					<section class="section white-bg">
-						<div class="container d-flex justify-content-center">
-                            <div class="login-signup-form gray-bg-100 p-4 billing-info">
-                                <div class="d-flex justify-content-end">
-                                     <p class="d-flex denote-required position-relative"><span
-                                        class="required-symbol">&#42;</span>= Required Field</p>
-                                </div>
-                                <div class="pr-4">
-                                    <div class="form-group mb-4 w-auto required">
-                                        <input type="username" class="form-control gray-box" id="loginEmail" aria-describedby="emailHelp" placeholder="User Name">
-                                    </div>
-                                    <div class="form-group mb-4 w-auto required">
-                                        <input type="email" class="form-control gray-box" id="emailAddress" aria-describedby="emailHelp" placeholder="E-mail Address">
-                                    </div>
-                                </div>
-                                
-                                <div>
-                                    <p class="mb-1">Remember Me</p>
-                                    <div class="white-bg p-3 gray-box">
-                                        <div class="custom-control custom-checkbox">
-                                            <input type="checkbox" class="custom-control-input" id="customCheck1">
-                                            <label class="custom-control-label" for="customCheck1">By clicking “Remember Me,” 
-                                                you allow Metro Transit/Metropolitan Council to create a “cookie” that is 
-                                                installed on your computer and remains there for seven days. This allows you 
-                                                to access personalized services on metrotransit.org without entering your 
-                                                username and password each time you visit.</label>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="d-flex justify-content-end mb-4">
-                                    <a href="">Forgot your password?</a>
-                                </div>
-                                <div class="text-center mb-4">
-                                    <a href="" class="btn btn-warning mb-4">Sign in</a>
-                                    <p class="mb-4 mt-4">Or</p>
-                                    <a href="" class="btn btn-warning">Create account</a>
-                                </div>
-                            </div>
-						</div>
-					</section>
-
-				</div>
-			</div>
-		</section>
+			</section>
+		</main>
 		<!-- End Main Content -->
 
 		<!-- Begin Footer -->
@@ -349,11 +351,9 @@
 		<!-- End Footer -->
 
 		<!-- Vendor scripts -->
-		<script src="/template/js/jquery.js"></script>
-		<script src="/template/js/popper.js"></script>
-		<script src="/template/js/bootstrap.js"></script>
-		<script src="/template/js/jquery.exlink.js"></script>
-		<script src="/template/js/svgxuse.js"></script>
+		<script src="/template/js/vendor/jquery.js"></script>
+		<script src="/template/js/vendor/popper.js"></script>
+		<script src="/template/js/vendor/bootstrap.js"></script>
 		<!-- End vendor scripts -->
 
 		<!-- build:js /template/js/scripts.min.js -->
